[package]
name = "libOpnFi"
version = "0.1.0"
authors = ["James Parks <jrjparks@zathera.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
toml = "0.5.5"
byteorder = "1.3.2"
flate2 = "1.0.13"
snap = "0.2.5"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
openssl = "0.10.26"
mac_address = "1.0.2"
enumflags2 = "0.6.2"
