[package]
name = "lib_opnfi"
version = "0.0.1"
authors = ["James Parks <jrjparks@zathera.com>"]
description = "Open source rust library to interface with Ubiquiti's family of Unifi SDN devices."
edition = "2018"
license = "Apache-2.0"
license-file = "../LICENSE"
readme = "README.md"
repository = "https://github.com/jrjparks/OpnFi-rs"

keywords = ["unifi", "ubiquiti"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
toml = "0.5.5"
byteorder = "1.3.2"
flate2 = "1.0.13"
snap = "0.2.5"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
openssl = "0.10.26"
pnet = "0.23.0"
enumflags2 = "0.6.2"
