[package]
name = "opnfi_device"
version = "0.0.1"
authors = ["James Parks <jrjparks@zathera.com>"]
edition = "2018"
license = "Apache-2.0"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_opnfi = {path = "../lib_opnfi"}
toml = "0.5.5"
rand = "0.7.2"
net2 = "0.2.33"
byteorder = "1.3.2"
serde = "1.0.103"
serde_json = "1.0.42"
sysinfo = "0.9.6"
reqwest = "0.9"
hex = "0.4.0"
pnet = "0.23.0"
clap = "2.33"
ctrlc = "3.1.3"
log = "0.4.8"
simple_logger = "1.3.0"